--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,11 +3,15 @@
 
 <%= form_tag home_index_path, :method => 'get' do %>
   <p>
+    <%= label_tag :search %>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
 
 <div class="results">
-	<%= @results %>
+	<% if @results %>
+  <h3>Search Results</h3>
+  <%= @results %>
+  <% end %>
 </div>
