Update api files, add bootstrap, add spec"

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,5 +9,11 @@
 <% end %>
 
 <div class="results">
-	<%= @results %>
+	<% if @results %>
+  <ul>
+    <%= @results['results'].each do |r| %>
+      <li><%= link_to r['formatted_address'] %></li>
+    <% end %>    
+  </ul>
+  <% end %>
 </div>
