--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
   <h3>Search Results</h3>
   <ul>
     <%= @results['results'].each do |r| %>
-      <li><%= link_to r['formatted_address'] %></li>
+      <li><%= link_to r['formatted_address'], home_show_path %></li>
     <% end %>    
   </ul>
   <% end %>
