--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,14 +11,14 @@
 
 <div class="results">
 	<% if @results %>
-  <h3 id="resultTitle">Search Results</h3>
-  <ul>
-    <%= @results['results'].each do |r| %>
-      <p class="destination">
-        <em><%= r['name'] %></em>
-      </p>
-      <li class="data"><%= r['formatted_address'] %>
-    <% end %>    
-  </ul>
+    <h3 id="resultTitle">Search Results</h3>
+    <ul>
+      <% @results['results'].each do |r| %>
+        <p class="destination">
+          <em><%= r['name'] %></em>
+        </p>
+        <li class="data"><%= r['formatted_address'] %>
+      <% end %>    
+    </ul>
   <% end %>
 </div>
