--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,11 +13,15 @@
 	<% if @results %>
   <h3 id="resultTitle">Search Results</h3>
   <ul>
-    <%= @results['results'].each do |r| %>
+    <% @results['results'].each do |r| %>
       <p class="destination">
-        <em><%= r['name'] %></em>
+        <%= r['name'] %>
       </p>
-      <li class="data"><%= r['formatted_address'] %>
+      <li class="data">
+        <span><%= r['formatted_address'] %></span>
+        <span><%= link_to "Add Article", new_article_path %></span>
+      </li>
+
     <% end %>    
   </ul>
   <% end %>
