--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,7 +6,7 @@
 
 <div class="form-group">
   <%= a.label :body %>
-  <%= a.textarea_field :body%>
+  <%= a.text_area :body%>
 </div>
 
 <div class="form-group">
@@ -18,3 +18,6 @@
   <%= a.label :image %>
   <%= a.text_field :image%>
 </div>
+
+<%= a.submit 'Submit' %>
+<% end %>
