--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @article do |a| %>
+<%= form_for @article do |a| %>
 <div class="form-group">
   <%= a.label :title %>
   <%= a.text_field :title%>
@@ -16,7 +16,7 @@
 
 <div class="form-group">
   <%= a.label :image %>
-  <%= a.text_field :image%>
+  <%= a.file_field :image%>
 </div>
 
 <%= a.submit 'Submit' %>
