Update on master mistake

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,24 @@
+<head>
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+
+
+<div class="jumbotron">
+<div class="container">
+
+
+
 <h1>Travelogue</h1>
 <p>Your destination for peer reviews</p>
+
+<button type="button" class="btn btn-default">How It Works</button>
+
+    </div>
+</div>
+
 
 <%= form_tag home_index_path, :method => 'get' do %>
   <p>
@@ -22,3 +41,4 @@
     </ul>
   <% end %>
 </div>
+
