Add nav with bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,52 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<!-- FIXED NAVBAR -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!-- LEFT NAV -->
+      <a class="navbar-brand" href="#">Travelogue</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home</a></li>
+        <% if user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">New Article</a></li>
+            <li><a href="#">Messages</a></li>            
+            <li class="divider"></li>
+            <li class="dropdown-header">Browse</li>
+            <li><a href="#">Articles</a></li>
+          </ul>
+        </li>
+        <% end %>         
+      </ul>
+      <!-- RIGHT NAV -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Sign-Up</a></li>
+        <li><a href="#">Login</a></li>
+        <% if user_signed_in? %>
+        <li><a href="#">Logout</a></li>
+        <% end %>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+<div class="container">
 
 <%= yield %>
+	
+</div>
+
 
 </body>
 </html>
