Add Pundit for authorization

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,13 +1,10 @@
-<h1>Article</h1>
+<h1>EDIT ARTICLE</h1>
+<!-- embedded ruby in _form.html.erb -->
+<!-- also in edit.html.erb -->
 
-<%= @article.title %>
-<%= @article.location %>
-<%= @article.image %>
-<p>
-  <%= @article.body %>
-</p>
+<%= render 'form' %>
 
-<%= link_to "Back", articles_path %>
+<%= link_to 'Back', articles_path %>
 
 <% if policy(@article).update? %>
   <%= link_to "Edit article", edit_article_path(@article) %>
