--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,3 +2,8 @@
 
 <h3>Title</h3>
 <h3>Text</h3>
+
+
+<% if policy(@article).update? %>
+  <%= link_to "New article", new_article_path(@article) %>
+<% end %>
