--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
       </ul>
       <!-- RIGHT NAV -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign-Up</a></li>
-        <li><a href="#">Login</a></li>
+        <li><%= link_to 'Sign-up', new_user_path %></li>
+        <li><%= link_to 'Login', new_user_session_path %></li>
         <% if user_signed_in? %>
-        <li><a href="#">Logout</a></li>
+        <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
         <% end %>
       </ul>
     </div><!--/.nav-collapse -->
