--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,15 +4,15 @@
 <p>Your destination for peer reviews</p>
 
 <button type="button" class="btn btn-default">How It Works</button>
-</div>
-
-<%= form_tag home_index_path, :method => 'get' do %>
+<%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
   <p>
     <%= label_tag :search %>
-    <%= text_field_tag :search, params[:search] %>
+    <%= text_field_tag :search, params[:search], class: 'form-control' %>
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
+</div>
+
 
 <div class="results">
 	<% if @results %>
