--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- LEFT NAV -->
-      <a class="navbar-brand" href="#">Travelogue</a>
+      <a class="navbar-brand" href="/">Travelogue</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -27,7 +27,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">New Article</a></li>
+            <li><%= link_to 'New Article', new_article_path %></li>
             <li><a href="#">Messages</a></li>            
             <li class="divider"></li>
             <li class="dropdown-header">Browse</li>
@@ -38,10 +38,11 @@
       </ul>
       <!-- RIGHT NAV -->
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Sign-up', new_user_path %></li>
-        <li><%= link_to 'Login', new_user_session_path %></li>
         <% if user_signed_in? %>
         <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
+        <% else %>
+        <li><%= link_to 'Sign-up', new_user_path %></li>
+        <li><%= link_to 'Login', new_user_session_path %></li>
         <% end %>
       </ul>
     </div><!--/.nav-collapse -->
