--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,8 +15,8 @@
 </div>
 
 <div class="form-group">
-  <%= a.label :image %>
-  <%= a.file_field :image%>
+  <%= a.label :avatar %>
+  <%= a.file_field :avatar %>
 </div>
 
 <%= a.submit 'Submit' %>
