--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,23 @@
-<h2>Sign up</h2>
+<h2>Sign-up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for @user, :url => users_path, :html => { :multipart => true } do |f| %>
+
+
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
+
+  <br>
+
+
+   <div class="field">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar %>
+  </div>
+
+<br>
 
   <div class="field">
     <%= f.label :password %>
@@ -16,11 +27,14 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  </div>  
 
+<br>
+ 
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
