--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,10 @@
 <h1>Articles</h1>
 
-<h3>Title</h3>
-<h3>Text</h3>
+<p>
+  <% @articles.each do |a| %>
+    <%= link_to a.title, a.id %>
+  <% end %>
+</p>
+<p>
+  
+</p>
