--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Articles</h1>
 
 <p>
-  <% @articles.each do |a| %>
-    <%= link_to a.title, a.id %>
-  <% end %>
+  <ul>
+    <% @articles.each do |a| %>
+    <li><%= link_to a.title, article_path(a.id.to_s) %></li>
+    <% end %>
+  </ul>
 </p>
 <p>
   
