--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,9 @@
-<h1>Article</h1>
+<h1><%= @article.title %></h1>
 
-<%= @article.title %>
-<%= @article.location %>
+
+<p><%= @article.location %></p>
 <%= @article.image %>
+
 <p>
   <%= @article.body %>
 </p>
