--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @article do |a| %>
+<%= form_for @article, :url => articles_path, :html => { :multipart => true } do |a| %>
 <div class="form-group">
   <%= a.label :title %>
   <%= a.text_field :title %>
