--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,16 @@
       </ul>
       <!-- RIGHT NAV -->
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Sign-up', new_user_registration_path %></li>
-        <li><%= link_to 'Login', new_user_session_path %></li>
-        <% if user_signed_in? %>
+
+      <% if user_signed_in? %>
         <li>Logged in as <%= current_user.email %></li>
+        
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
-        <% end %>
+      <% else %>
+        <li><%= link_to 'Sign-up', new_user_registration_path %></li>
+        <li><%= link_to 'Login', new_user_session_path %></li>
+      <% end %>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
