--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
         <% else %>
-        <li><%= link_to 'Sign-up', new_user_path %></li>
+        <li><%= link_to 'Sign-up', new_user_registration_path %></li>
         <li><%= link_to 'Login', new_user_session_path %></li>
         <% end %>
       </ul>
