--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,13 +17,14 @@
 
 </div>
 
+<!-- LEFT SIDE -->
 <div class="col-sm-9">
   <div class="results">
   	<% if @results %>
     <h3 id="resultTitle">Search Results</h3>
     <!-- LIST ALL SEARCH RESULTS -->
       <%= @results['results'].each do |r| %>
-        <div>
+        <div id="listResults">
           <h4><%= link_to r['name'], r['place_id'].to_s %></h4>
           <p class="data">
             <span><%= r['formatted_address'] %></span>
@@ -36,7 +37,9 @@
   </div>
 </div>
 
+<!-- RIGHT SIDEBAR -->
 <div class="col-sm-3">
+  <!-- LIST OF CURRENT LOCATIONS WITH ARTICLES -->
   <ul>
     <% @locations.each do |location| %>
     <li><%= link_to location, articles_path(location: location) %></li>
