Search box inner text updated

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,7 @@
 
 <%= link_to "Back", articles_path %>
 
-<% if policy(@article).update? %>
+<% if policy(@article).update? %>  <!-- shows only if current user authorized -->
   <%= link_to "Edit article", edit_article_path(@article) %>
   <%= link_to "Delete article", edit_article_path(@article) %>
 <% end %>
