--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+      <!--   <li class="active"><a href="/">Home</a></li> -->
+
+     
+
         <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -36,10 +39,14 @@
         </li>
         <% end %>         
       </ul>
+
+
+
+
       <!-- RIGHT NAV -->
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-        <li>Logged in as <%= current_user.email %></li>
+        <li id="loggedin">Welcome <%= current_user.email %>!</li>
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
         <% else %>
