--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,55 +3,49 @@
   <h1>Travelogue</h1>
   <p>Your destination for peer reviews</p>
 
-  <button type="button" class="btn btn-default" id="how-it-works">How It Works</button>
-  <!-- SEARCH BOX -->
-  <div>
-    <%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
-      <p>
-        <%= label_tag :search %>
-        <%= text_field_tag :search, params[:search], class: 'form-control' %>
-        <%= submit_tag "Search", :name => nil %>
-      </p>
-    <% end %>
-  </div>
-
-
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
   How it works
-</button>
+</button> -->
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">How it works</h4>
       </div>
-      <!-- Add padding to this text -->
+      Add padding to this text
       <p>Travelogue is a social networking and blogging web application where users can share their travel experiences, advice, and photos. Users/travelers can search by destination and read what other users are posting about that location using the Google Places API.</p>  
       <div class="modal-footer">
         <button type="button" class="close" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-
-
-<%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
-  <p>
-    <%= label_tag :search %>
-    <%= text_field_tag :search, params[:search], class: 'form-control' %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %>
-</div>
+<!-- SEARCH BOX -->
+  <div>
+    <%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
+      <p>
+        <%= label_tag :search %>
+        <%= text_field_tag :search, params[:search], class: 'form-control' %>
+        <%= submit_tag "Search", class: "btn btn-warning btn-lg", onclick: "getResults()" %>
+      </p>
+    <% end %>
+  </div>
 
 <!-- LEFT SIDE -->
-<div class="col-sm-9">
-  <div class="results">
-  	<% if @results %>
-    <h3 id="resultTitle">Search Results</h3>
+  <div class="col-sm-9">
+    
+<% if @results %>
+          <h3 id="resultTitle">
+            
+          </h3>
+        </div>
+      </div>
+                  <div class="results">
+    
+    
     <!-- LIST ALL SEARCH RESULTS -->
       <%= @results['results'].each do |r| %>
         <div id="listResults">
@@ -63,41 +57,11 @@
         </div>
       <% end %>    
   
-    <% end %>
+   
   </div>
-</div>
 
-<!-- RIGHT SIDEBAR -->
-
-<% if @results %>
-  <div class="col-sm-9">
-    <div class="panel-group" id="accordion">
-      <div class="panel panel-default">
-        <div class="pane-heading">
-          <h3 class="panel-title">
-            <a href="#collapseOne" data-toggle="collapse" data-parent="accordion">
-              Search results
-          </h3>
-        </div>
-      </div>
-        <div id="collapseOne" class="panel-panel collapse in">
-          <div class="panel-body">
-          <ul>
-              <%= @results['results'].each do |r| %>
-                <p class="destination">
-                 <%= r['name'] %>
-               </p>
-                <li class="data">
-                  <span><%= r['formatted_address'] %></span>
-                  <span><%= link_to "Add Article", new_article_path %></span>
-                </li>
-              <% end %>    
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
 <% end %>
+  </div>
 <!-- Incorporate the collapse functionality above with the search syntax below -->
 
 <div class="col-sm-3">
