--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,19 +3,6 @@
   <h1>Travelogue</h1>
   <p>Your destination for peer reviews</p>
 
-  <button type="button" class="btn btn-default" id="how-it-works">How It Works</button>
-  <!-- SEARCH BOX -->
-  <div>
-    <%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
-      <p>
-        <%= label_tag :search %>
-        <%= text_field_tag :search, params[:search], class: 'form-control' %>
-        <%= submit_tag "Search", :name => nil %>
-      </p>
-    <% end %>
-  </div>
-
-
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
   How it works
 </button>
@@ -37,12 +24,12 @@
 </div>
 
 
-
+<!-- SEARCH BOX -->
 <%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
   <p>
     <%= label_tag :search %>
     <%= text_field_tag :search, params[:search], class: 'form-control' %>
-    <%= submit_tag "Search", :name => nil %>
+    <%= submit_tag "Search", class: "btn btn-warning btn-lg" %>
   </p>
 <% end %>
 </div>
@@ -68,37 +55,6 @@
 </div>
 
 <!-- RIGHT SIDEBAR -->
-
-<% if @results %>
-  <div class="col-sm-9">
-    <div class="panel-group" id="accordion">
-      <div class="panel panel-default">
-        <div class="pane-heading">
-          <h3 class="panel-title">
-            <a href="#collapseOne" data-toggle="collapse" data-parent="accordion">
-              Search results
-          </h3>
-        </div>
-      </div>
-        <div id="collapseOne" class="panel-panel collapse in">
-          <div class="panel-body">
-          <ul>
-              <%= @results['results'].each do |r| %>
-                <p class="destination">
-                 <%= r['name'] %>
-               </p>
-                <li class="data">
-                  <span><%= r['formatted_address'] %></span>
-                  <span><%= link_to "Add Article", new_article_path %></span>
-                </li>
-              <% end %>    
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
-<!-- Incorporate the collapse functionality above with the search syntax below -->
 
 <div class="col-sm-3">
   <!-- LIST OF CURRENT LOCATIONS WITH ARTICLES -->
