--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
   <p>
     <%= label_tag :search %>
     <%= text_field_tag :search, params[:search], class: 'form-control' %>
-    <%= submit_tag "Search", class: "btn btn-warning btn-lg" %>
+    <%= submit_tag "Search", class: "btn btn-warning btn-lg", onclick: "getResults()" %>
   </p>
 <% end %>
 </div>
@@ -37,20 +37,14 @@
 <!-- LEFT SIDE -->
 <div class="col-sm-9">
   <div class="results">
-  	<% if @results %>
+  	
     <h3 id="resultTitle">Search Results</h3>
     <!-- LIST ALL SEARCH RESULTS -->
-      <%= @results['results'].each do |r| %>
+      
         <div id="listResults">
-          <h4><%= link_to r['name'], r['place_id'].to_s %></h4>
-          <p class="data">
-            <span><%= r['formatted_address'] %></span>
-            <span><%= link_to "Add Article", new_article_path, class: "btn btn-info" %></span>
-          </p>
+          
         </div>
-      <% end %>    
-  
-    <% end %>
+      
   </div>
 </div>
 
