--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,23 +1,78 @@
+<!-- Form -->
+
 <%= form_for @article, :url => articles_path, :html => { :multipart => true } do |a| %>
-<div class="form-group">
-  <%= a.label :title %>
-  <%= a.text_field :title %>
+
+<span class="input input--minoru">
+	<%= a.text_field :title, class: "input__field input__field--yoko", id: "input-16" %>
+	<label class="input__label input__label--yoko" for="input-16">
+		<span class="input__label-content input__label-content--yoko"><%= a.label :title %> </span>
+	</label>
+</span>
+
+<div class="bodytext">
+<span class="input input--minoru">
+	<%= a.text_area :body, class: "input__field input__field--yoko", id: "input-17" %>
+		<label class="input__label input__label--yoko" for="input-17">
+			<span class="input__label-content input__label-content--yoko"><%= a.label :body %></span>
+		</label>
+</span>
 </div>
 
-<div class="form-group">
-  <%= a.label :body %>
-  <%= a.text_area :body %>
-</div>
 
-<div class="form-group">
-  <%= a.label :location %>
-  <%= a.text_field :location %>
-</div>
+<br/>
+
+<span class="input input--minoru">
+	<%= a.text_field :location, class: "input__field input__field--yoko", id: "input-18" %>
+		<label class="input__label input__label--yoko" for="input-18">
+			<span class="input__label-content input__label-content--yoko"><%= a.label :location %></span>
+		</label>
+</span>
+
 
 <div class="form-group">
   <%= a.label :image %>
   <%= a.file_field :image %>
 </div>
 
+<br/>
+
 <%= a.submit 'Submit' %>
+
 <% end %>
+
+
+
+<!-- Script -->
+
+<script src="js/classie.js"></script>
+<script>
+	(function() {
+		// trim polyfill : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/Trim
+		if (!String.prototype.trim) {
+			(function() {
+				// Make sure we trim BOM and NBSP
+				var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
+				String.prototype.trim = function() {
+					return this.replace(rtrim, '');
+				};
+			})();
+		}
+		[].slice.call( document.querySelectorAll( 'input.input__field' ) ).forEach( function( inputEl ) {
+			// in case the input is already filled..
+			if( inputEl.value.trim() !== '' ) {
+				classie.add( inputEl.parentNode, 'input--filled' );
+			}
+			// events:
+			inputEl.addEventListener( 'focus', onInputFocus );
+			inputEl.addEventListener( 'blur', onInputBlur );
+		} );
+		function onInputFocus( ev ) {
+			classie.add( ev.target.parentNode, 'input--filled' );
+		}
+		function onInputBlur( ev ) {
+			if( ev.target.value.trim() === '' ) {
+				classie.remove( ev.target.parentNode, 'input--filled' );
+			}
+		}
+	})();
+</script>
