--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,11 +24,11 @@
 </div>
 
 <!-- SEARCH BOX -->
-<%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
+<%= form_tag class: 'form-group' do %>
   <p>
     <%= label_tag :search %>
     <%= text_field_tag :search, params[:search], class: 'form-control' %>
-    <%= submit_tag "Search", class: "btn btn-warning btn-lg", :placeholder => "e.g. Tokyo museums, Seattle cafes, Dublin pubs, etc.", onclick: "getResults()" %>
+    <%= submit_tag "Search", class: "btn btn-warning btn-lg", :placeholder => "e.g. Tokyo museums, Seattle cafes, Dublin pubs, etc.", onclick: "requestJSON()" %>
   </p>
 <% end %>
 </div>
