Update to app controller, discard

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,3 +14,6 @@
         <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
         </ul> 
  <% end %>
+
+<h3>My Articles:</h3><li><%= @article %></li>
+
