--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,23 @@
-<h2>Sign-up</h2>
-
 <%= form_for @user, :url => users_path, :html => { :multipart => true } do |f| %>
 
 
+<div class="container">    
+        <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+          <div class="panel panel-info" >
+
+          <div class="panel-heading">
+                        <div class="panel-title">Sign Up</div>
+                  
+                    </div>     
+
+          <div style="padding-top:30px" class="panel-body" >
+
+          <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+          <form id="loginform" class="form-horizontal" role="form">
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %><br/>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
@@ -27,6 +39,7 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
+<br>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
@@ -36,8 +49,16 @@
 <br>
  
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
 
+<br/>
+
 <%= render "devise/shared/links" %>
+
+</div>
+</div>
+</div>
+</div>
+
