--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
         <li id="loggedin">Welcome <%= current_user.email %>!</li>
+        <li><%= link_to 'My profile', current_user %></li>
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
         <% else %>
