--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,9 @@
   <%= @article.body %>
 </p>
 
+<%= render 'comment_form' %>
+
+
 <%= link_to "Back", articles_path %>
 
 <% if policy(@article).edit? %>
