--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,66 +3,56 @@
   <h1>Travelogue</h1>
   <p>Your destination for peer reviews</p>
 
-<!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
   How it works
-</button> -->
+</button>
 
-<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">How it works</h4>
       </div>
-      Add padding to this text
+      <!-- Add padding to this text -->
       <p>Travelogue is a social networking and blogging web application where users can share their travel experiences, advice, and photos. Users/travelers can search by destination and read what other users are posting about that location using the Google Places API.</p>  
       <div class="modal-footer">
         <button type="button" class="close" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <!-- SEARCH BOX -->
-  <div>
-    <%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
-      <p>
-        <%= label_tag :search %>
-        <%= text_field_tag :search, params[:search], class: 'form-control' %>
-        <%= submit_tag "Search", class: "btn btn-warning btn-lg", onclick: "getResults()" %>
-      </p>
-    <% end %>
-  </div>
+<%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
+  <p>
+    <%= label_tag :search %>
+    <%= text_field_tag :search, params[:search], class: 'form-control' %>
+    <%= submit_tag "Search", class: "btn btn-warning btn-lg", :placeholder => "e.g. Tokyo museums, Seattle cafes, Dublin pubs, etc." %>
+  </p>
+<% end %>
+</div>
 
 <!-- LEFT SIDE -->
-  <div class="col-sm-9">
-    
-<% if @results %>
-          <h3 id="resultTitle">
-            
-          </h3>
-        </div>
-      </div>
-                  <div class="results">
-    
-    
+<div class="col-sm-9">
+  <div class="results">
+  	<% if @results %>
+    <h3>Search Results</h3>
     <!-- LIST ALL SEARCH RESULTS -->
-      <%= @results['results'].each do |r| %>
-        <div id="listResults">
+      <% @results['results'].each do |r| %>
+        <div>
           <h4><%= link_to r['name'], r['place_id'].to_s %></h4>
           <p class="data">
             <span><%= r['formatted_address'] %></span>
             <span><%= link_to "Add Article", new_article_path, class: "btn btn-info" %></span>
           </p>
         </div>
-      <% end %>    
-  
-   
+      <% end %>
+    <% end %>
   </div>
+</div>
 
-<% end %>
-  </div>
-<!-- Incorporate the collapse functionality above with the search syntax below -->
+<!-- RIGHT SIDEBAR -->
 
 <div class="col-sm-3">
   <!-- LIST OF CURRENT LOCATIONS WITH ARTICLES -->
