--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,21 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!-- <h2>Edit <%= resource_name.to_s.humanize %></h2> -->
 
 <%= form_for @user, :url => users_path, :html => { :multipart => true } do |f| %>
+
+<div class="container">    
+        <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+          <div class="panel panel-info" >
+
+          <div class="panel-heading">
+                        <div class="panel-title">Edit User</div>
+                  
+                    </div>     
+
+          <div style="padding-top:30px" class="panel-body" >
+
+          <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+          <form id="loginform" class="form-horizontal" role="form">
 
 
   <div class="field">
