--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
  <% end %>
 
 <h3>My Articles:</h3>
+
 <% @user.articles.each do |r| %>
-<li><%= r.title %></li>
+<li><%= link_to r.title, r %></li>
 <% end %>
