--- a/app/views/articles/_comment_form.html.erb
+++ b/app/views/articles/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @comment, :url => new_article_comment_path, :html => { :multipart => true } do |a| %>
+<%= form_for ([@article, @article.comments.build]) do |a| %>
 <div class="form-group">
   <%= a.label :body %>
   <%= a.text_field :body %>
