--- a/app/views/articles/_comment_form.html.erb
+++ b/app/views/articles/_comment_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for ([@article, @article.comments.build]) do |a| %>
 <div class="form-group">
-  <%= a.label :body %>
-  <%= a.text_field :body %>
+  <%= a.label 'Leave a Comment' %>
+  <%= a.text_area :body, class: "form-control" %>
 </div>
 
-<%= a.submit 'Submit' %>
+<%= a.submit 'Submit', class: "btn btn-default" %>
 <% end %>
