--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,9 +1,14 @@
-<h1>CREATE A NEW ARTICLE</h1>
+<div class="article">
+
+<h1 class="newtrip">WENT ON A TRIP?</h1>
+<h3>Do tell!</h3>
 <!-- embedded ruby in _form.html.erb -->
 <!-- also in edit.html.erb -->
 
 <%= render 'form' %>
 
 <%= link_to 'Back', articles_path %>
+
+</div>
 
 
