Format show, add details

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <tr>
 	<td>
-		<%= comment.body %>
+		<%= comment.body, class: "animated" %>
 	</td>
 	<td>
 		<span><%= link_to 'X', [comment.article, comment],
