--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,29 @@
 <h1><%= @details['result']['name'] %></h1>
+<div class="col-sm-6">
+	<p><%= @details['result']['formatted_address'] %></p>
+	<p>
+		<em>Type: </em>
+		<% @details['result']['types'].each do |t| %>
+			<%= t %>
+		<% end %>
+	</p>
+	<p>
+		Rating: <%= @details['result']['rating'] %>
+	</p>
+	<p>
+		Price Level: <%= @details['result']['price_level'] %>
+	</p>
+</div>
+<p>
+	<span><%= link_to "Add Article", new_article_path, class: "btn btn-info" %></span>
+</p>
 
-<%= @details['result']['formatted_address'] %>
-
-<div class="map"></div>
+<div class="">
+	<iframe 
+			width="600",
+  		height="450",
+  		frameborder="3",
+  		style="border: solid 3px black",
+  		src="https://www.google.com/maps/embed/v1/place?key=
+  		<%= API_KEY %>&q=<%= @details['result']['name'] %>" ></iframe>
+</div>
