Improve home page layout

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,14 @@
-<h1>Articles</h1>
+<h1>Articles for ...</h1>
 
-<p>
-  <ul>
+<div class="col-sm-6">
+  <ul class="list-group">
+  	<%= link_to params[:location], '#', class: "list-group-item active" %>
     <% @articles.each do |article| %>
-      <li id="article_id-<%= article.id %>">
-        <%= link_to article.title, article %>
-        <%= link_to 'Delete', article_path(article), method: :delete, remote: true %>
-      </li>
+      <div id="article_id-<%= article.id %>">
+        <li class="list-group-item"><%= link_to article.title, article %>
+        <span class="badge"><%= link_to 'Delete', article_path(article), method: :delete, remote: true %></span>
+        </li>
+      </div>      
     <% end %>
   </ul>
-</p>
-<p>
-  
-</p>
+</div>
