--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,16 +35,16 @@
 
 <!-- LEFT SIDE -->
 <div class="col-sm-9">
-  <div class="results">
+  <div class="list-group results">
   	<% if @results %>
-    <h3>Search Results</h3>
+    <h3><a class="list-group-item active">Search Results</a></h3>
     <!-- LIST ALL SEARCH RESULTS -->
       <% @results['results'].each do |r| %>
-        <div>
-          <h4><%= link_to r['name'], r['place_id'].to_s %></h4>
-          <p class="data">
-            <span><%= r['formatted_address'] %></span>
-            <span><%= link_to "Add Article", new_article_path, class: "btn btn-info" %></span>
+        <div class="list-group-item">
+          <h4 class="list-group-item-heading"><%= link_to r['name'], r['place_id'].to_s %></h4>
+          <p class="list-group-item-text">
+            <%= r['formatted_address'] %>
+            <%= link_to "Add Article", new_article_path, class: "btn btn-info" %>
           </p>
         </div>
       <% end %>
@@ -56,9 +56,10 @@
 
 <div class="col-sm-3">
   <!-- LIST OF CURRENT LOCATIONS WITH ARTICLES -->
-  <ul>
-    <% @locations.each do |location| %>
-    <li><%= link_to location, articles_path(location: location) %></li>
-    <% end %>
-  </ul>
+  <div class="list-group">
+    <a href="" class="list-group-item active">Quick Nav</a>
+      <% @locations.each do |location| %>
+      <%= link_to location, articles_path(location: location), class: "list-group-item" %>
+      <% end %>
+  </div>
 </div>
