--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,10 @@
 
 <br>
 
-<h3>Check out your Articles</h3><li><%= @article %></li>
+<h3>Check out your Articles</h3>
+<% @user.articles.each do |r| %>
+<li><%= link_to r.title, r %></li>
+<% end %>
 
 
 
@@ -27,9 +30,3 @@
 
  </div>
 
-<h3>My Articles:</h3>
-
-
-<% @user.articles.each do |r| %>
-<li><%= link_to r.title, r %></li>
-<% end %>
