--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,8 +27,8 @@
 <%= form_tag home_index_path, :method => 'get', class: 'form-group' do %>
   <p>
     <%= label_tag :search %>
-    <%= text_field_tag :search, params[:search], class: 'form-control' %>
-    <%= submit_tag "Search", class: "btn btn-warning btn-lg", :placeholder => "e.g. Tokyo museums, Seattle cafes, Dublin pubs, etc." %>
+    <%= text_field_tag :search, params[:search], :placeholder => "e.g. Tokyo museums, Seattle cafes, Dublin pubs, etc.", class: 'form-control' %>
+    <%= submit_tag "Search", class: "btn btn-warning btn-lg" %>
   </p>
 <% end %>
 </div>
