--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,7 +4,7 @@
 
 	<%= a.hidden_field :google_id, :value => @google_id %>
 <span class="input input--minoru">
-	<%= a.text_field :location, class: "input__field input__field--yoko", id: "placeName" %>
+	<%= a.text_field :location, class: "input__field input__field--yoko", id: "placeName", :value => @details['result']['address_components'][2]["long_name"] + ", " + @details['result']['address_components'][3]["short_name"] %>
 		<label class="input__label input__label--yoko" for="placeName">
 			<span class="input__label-content input__label-content--yoko"><%= a.label :location %></span>
 		</label>
