--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,8 +47,8 @@
             <%= link_to "Add Article", new_article_path, class: "btn btn-info" %>
           </p>
         </div>
-      <% end %>
-    <% end %>
+      <% end %><!-- END SEARCH RESULTS --> 
+    <% end %> <!-- END LEFT -->
   </div>
 </div>
 
